# attendance-calc-mcp

./: Dockerfile  GEMINI.md  entrypoint.sh  main.py  pyproject.toml
.gemini/: additional_mcp_function.md  compare_csv_files.md
app/: attendance_collect_logic.py  attendance_contract_query.py  attendance_day_collect.py  calc_work_classes3.py  calc_work_classes4.py  calc_work_classes_4_mcp.py  csv_parser.py  database_base.py  models.py  schemas.py
app/caluculation/: calc_work_classes_4_mcp.py
app/database/: attendance_contract_query.py  database_base.py
app/logics/: attendance_collect_logic.py  attendance_day_collect.py  csv_comparator.py  logic_util.py
app/models/: models.py  models_aprv.py  models_tt.py
app/server/: endpoint.py  mcp_tools_call.py
app/static/css/: style.css  style.css.map
app/static/css/_sass/: style.scss
app/static/js/: AppearRequireChatForm.js  DiffDataToDetails.js
app/templates/: select_home.html  user_attendance_front.html
app/templates/csv/: csv_diff.html
app/templates/prompt/: ai_response.html  mcp_prompt.html  user_attendance.html
tests/: test_attendance_collect.py  test_attendance_mcp.py  test_csv_comparator.py  test_csv_parser.py
