[project]
name = "attendance-calc-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.127.0",
    "pandas",
    "jinja2>=3.1.6",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "werkzeug>=3.1.4",
    "sqlalchemy>=2.0.45",
    "pymysql>=1.1.2",
    "fastmcp>=2.14.3",
    "pydantic>=2.12.5",
    "mcp[cli]>=1.25.0",
    "google-genai>=1.60.0",
    "huggingface-hub>=1.4.1",
]
